--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,27 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href={{ url_for("static", filename="styles.css" ) }}>
+    <link rel="apple-touch-icon" sizes="180x180" href={{ url_for("static", filename="apple-touch-icon.png" ) }}>
+    <link rel="icon" type="image/png" sizes="32x32" href={{ url_for("static", filename="favicon-32x32.png" ) }}>
+    <link rel="icon" type="image/png" sizes="16x16" href={{ url_for("static", filename="favicon-16x16.png" ) }}>
+    <link rel="manifest" href={{ url_for("static", filename="site.webmanifest" ) }}>
     <title>{{ title }}</title>
 </head>
 
 <body>
-    <nav>
-        <ul class="navbar">
-            <li><a href={{ url_for("home") }}>Home</a></li>
-            <li><a href={{ url_for("about") }}>About</a></li>
-            <li><a href={{ url_for("employees") }}>Employees</a></li>
-            <li><a href={{ url_for("careers") }}>Careers</a></li>
-            <li><a href={{ url_for("contact") }}>Contact Us</a></li>
-        </ul>
-    </nav>
 
     {% block content %}
     {% endblock content %}
 
-    <footer>
-        Made with &#129505; by <a href="https://github.com/nirmit27" target="_blank" rel="noreferrer noopener">Nirmit
-            Mishra</a>.
-    </footer>
 </body>
 
 </html>
