--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,15 @@ body {
     position: relative;
 }
 
+a {
+    color: slateblue;
+    font-weight: bold;
+}
+
+a:hover {
+    color: blue;
+}
+
 .content {
     width: 100%;
     height: 100%;
@@ -17,6 +26,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+h1>span {
+    color: slateblue;
+    text-decoration: underline;
 }
 
 form {
@@ -32,12 +46,25 @@ form {
 
 form>div {
     display: grid;
+    position: relative;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
 }
 
-#login>div{
+#login>div {
     grid-template-columns: 1fr 2fr;
+}
+
+#login>div:nth-child(5) {
+    font-size: smaller;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#login>div:nth-child(5)>input {
+    width: 1rem;
+    height: 1rem;
 }
 
 form>h1 {
@@ -53,7 +80,7 @@ form label {
 }
 
 input,
-select {  
+select {
     width: 13rem;
     height: 1.8rem;
     padding: 4px;
@@ -64,8 +91,7 @@ select {
 
 input:focus,
 select:focus {
-    outline: none;
-    border-color: blueviolet;
+    outline: solid 2px blueviolet;
 }
 
 #submit {
@@ -81,6 +107,10 @@ select:focus {
     cursor: pointer;
 }
 
+#submit:focus {
+    outline: 2px blue solid;
+}
+
 input[type="submit"][value="Sign up"] {
     background-color: rgb(12, 156, 12);
 }
@@ -93,14 +123,44 @@ input[type="submit"][value="Sign up"]:active {
     background-color: rgb(60, 97, 5);
 }
 
-input[type="submit"][value="Login"] {
+input[type="submit"][value="Log in"] {
     background-color: slateblue;
 }
 
-input[type="submit"][value="Login"]:hover {
+input[type="submit"][value="Log in"]:hover {
+    background-color: blue;
+}
+
+input[type="submit"][value="Log in"]:active {
+    background-color: rgb(29, 45, 81);
+}
+
+.options {
+    font-size: 0.9rem;
+    position: fixed;
+    bottom: 1.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.4rem;
+}
+
+.message {
+    top: 2rem;
+    right: 2rem;
+    position: absolute;
+    padding: 15px;
+    border-radius: 20px;
+    color: white;
+    text-align: left;
     background-color: blueviolet;
 }
 
-input[type="submit"][value="Login"]:active {
-    background-color: blue;
+.error {
+    top: 1.8rem;
+    position: absolute;
+    font-size: 0.8rem;
+    color: red;
+    font-weight: 600;
 }
