--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,14 @@
 
 <body>
 
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="message">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
     {% block content %}
     {% endblock content %}
 
