--- a/templates/login.html
+++ b/templates/login.html
@@ -6,17 +6,34 @@
         {{ form.hidden_tag() }}
         <h1>{{ title }}</h1>
         <div>
-            {{ form.email.label }}
-            {{ form.email }}
+            {{ form.username.label }}
+            {{ form.username() }}
+            {% if form.username.errors %}
+            {% for error in form.username.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
         </div>
         <div>
             {{ form.password.label }}
-            {{ form.password }}
+            {{ form.password() }}
+            {% if form.password.errors %}
+            {% for error in form.password.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div id="rememeber-me">
+            {{ form.remember_me.label }}
+            {{ form.remember_me() }}
         </div>
         <div>
             {{ form.submit() }}
         </div>
     </form>
+    <div class="options">
+        <p>Not registered? <a href={{url_for("signup")}}>Sign up</a></p>
+    </div>
 </div>
 
 {% endblock content %}
