--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,32 +7,65 @@
         <h1>{{ title }}</h1>
         <div>
             {{ form.username.label }}
-            {{ form.username }}
+            {{ form.username() }}
+            {% if form.username.errors %}
+            {% for error in form.username.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
         </div>
         <div>
-        {{ form.email.label }}
-        {{ form.email }}
+            {{ form.email.label }}
+            {{ form.email() }}
+            {% if form.email.errors %}
+            {% for error in form.email.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.gender.label }}
+            {{ form.gender() }}
+            {% if form.gender.errors %}
+            {% for error in form.gender.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.dob.label }}
+            {{ form.dob() }}
+            {% if form.dob.errors %}
+            {% for error in form.dob.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.password.label }}
+            {{ form.password() }}
+            {% if form.password.errors %}
+            {% for error in form.password.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.confirm_password.label }}
+            {{ form.confirm_password() }}
+            {% if form.confirm_password.errors %}
+            {% for error in form.confirm_password.errors %}
+            <div class="error">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.submit() }}
+        </div>
+    </form>
+    <div class="options">
+        <p>Already registered? <a href={{url_for("login")}}>Log in</a></p>
     </div>
-    <div>
-        {{ form.gender.label }}
-        {{ form.gender }}
-    </div>
-    <div>
-        {{ form.dob.label }}
-        {{ form.dob }}
-    </div>
-    <div>
-        {{ form.password.label }}
-        {{ form.password }}
-    </div>
-    <div>
-        {{ form.confirm_password.label }}
-        {{ form.confirm_password }}
-    </div>
-    <div>
-        {{ form.submit() }}
-    </div>
-</form>
 </div>
 
 {% endblock content %}
