--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
         </div>
     </form>
     <div class="options">
-        <p>Not registered? <a href={{url_for("signup")}}>Sign up</a></p>
+        <p>Not a registered user? <a href={{url_for("signup")}}>Sign up</a></p>
     </div>
 </div>
 
