CRUD ops + routing

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -4,7 +4,7 @@
 
 {% if user.is_authenticated %}
 
-<form action="/" method="post" id="create-todo-form" class="w-full max-w-sm mx-auto">
+<form action="/list" method="post" id="create-todo-form" class="w-full max-w-sm mx-auto -mt-10">
     <h1 class="create text-2xl font-bold text-center mb-8 text-blue-700">Create Todo</h1>
     <div class="field mb-6">
         <label for="title" class="block text-lg font-medium text-gray-700">Title</label>
