--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,16 +5,14 @@
 
 ::-webkit-scrollbar-track {
     background: #f0f0f0;
-    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(90deg, #4facfe, #00f2fe);
-    border-radius: 5px;
+    background: #2563ea;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(90deg, #43e97b, #38f9d7);
+    background: #9176df;
 }
 
 /* Flash messages container */
