--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,43 +1,56 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<div class="main p-6">
-    <div class="options flex justify-center items-center space-x-6 mb-8">
+<div class="main px-12 py-8 bg-gray-100 min-h-screen w-full">
+    <div class="text-center mb-6">
+        <h1 class="text-3xl font-bold text-gray-700">Your Todo List</h1>
+        <p class="text-gray-500 mt-2">Keep track of your tasks and stay organized!</p>
+    </div>
+
+    <div class="flex justify-center mb-8">
         <a href="{{ url_for('view.create_todo') }}"
-            class="text-white bg-blue-500 hover:bg-blue-700 px-6 py-3 rounded-lg shadow-lg">
+            class="text-white bg-blue-500 hover:bg-blue-700 px-6 py-4 rounded-lg shadow-md transition duration-200">
             Create Todo
         </a>
-        <!-- <a href="{{ url_for('view.home') }}"
-            class="text-white bg-green-500 hover:bg-green-700 px-6 py-3 rounded-lg shadow-lg transition-all duration-200 transform hover:scale-105">
-            List Todos
-        </a> -->
     </div>
 
     {% if user.todos %}
-    <div class="todo-list space-y-4">
 
-        {% for todo in user.todos %}
-
-        <div class="todo-box flex justify-between items-center p-4 bg-white rounded-lg shadow-lg">
-            <div class="text flex-1">
-                <div class="title font-bold text-xl mb-2">{{ todo.title }}</div>
-                <div class="message text-white">{{ todo.content }}</div>
-            </div>
-            <div class="icons flex space-x-4">
-                <a href="/update-todo/{{ todo.id }}" class="text-yellow-500 hover:text-yellow-700">
-                    <i class="fa fa-edit text-xl"></i>
-                </a>
-                <button class="delete-btn text-red-500 hover:text-red-700" onclick="deleteTodo({{ todo.id }})">
-                    <p class="text-xl">Delete</p>
-                </button>
-            </div>
-        </div>
-
-        {% endfor %}
-
+    <div class="overflow-x-auto rounded-lg shadow-lg mx-auto">
+        <table class="table-auto bg-white table-fixed w-full">
+            <thead class="bg-blue-600 text-white">
+                <tr>
+                    <th class="p-4 text-left w-1/4">Title</th>
+                    <th class="p-4 text-left w-2/4">Content</th>
+                    <th class="p-4 text-center w-1/4">Actions</th>
+                </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-300">
+                {% for todo in user.todos %}
+                <tr>
+                    <td class="p-4 font-bold w-1/4">{{ todo.title }}</td>
+                    <td class="p-4 w-2/4">{{ todo.content }}</td>
+                    <td class="p-4 text-center space-x-4 w-1/4">
+                        <a href="/update-todo/{{ todo.id }}" class="text-yellow-500 hover:text-yellow-700">
+                            <i class="fa fa-edit text-lg">Update</i>
+                        </a>
+                        <button class="delete-btn text-red-500 hover:text-red-700" onclick="deleteTodo({{ todo.id }})">
+                            <i class="material-icons text-lg">Delete</i>
+                        </button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-    {% endif %}
 
+    {% else %}
+
+    <div class="text-center mt-16">
+        <p class="text-gray-500 text-xl">No todos found. Create your first one!</p>
+    </div>
+
+    {% endif %}
 </div>
 
 {% endblock content %}
