--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,26 +21,36 @@
 <body class="">
   <!-- NAVBAR -->
   <nav class="bg-blue-600 text-white py-4 px-6 flex justify-between items-center">
-    <div class="text-2xl font-bold">
-      <a href="/" class="hover:underline">ToDo App</a>
-    </div>
+    <div class="flex items-center space-x-12">
+      <div class="text-2xl font-bold -mt-1">
+        <a href="/" class="hover:underline">ToDo App</a>
+      </div>
 
-    <div class="space-x-4">
-      <a href="/" class="hover:underline">Home</a>
-      <a href="/about" class="hover:underline">About</a>
-      <a href="/contact" class="hover:underline">Contact</a>
-    </div>
-
-    <div>
       {% if current_user.is_authenticated %}
-      <a href="{{ url_for('auth.logout') }}"
-        class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600 transition duration-300">Logout</a>
-      {% else %}
-      <a href="{{ url_for('auth.login') }}"
-        class="bg-green-500 text-white px-4 py-2 rounded-md hover:bg-green-600 transition duration-300">Login</a>
+      <a href="{{ url_for('view.home') }}" class="hover:underline text-lg">Home</a>
       {% endif %}
     </div>
+
+    <div class="flex items-center space-x-4">
+      {% if current_user.is_authenticated %}
+
+      <a href="{{ url_for('auth.logout') }}"
+        class="bg-red-500 text-white text-sm font-semibold px-4 py-2 rounded-md hover:bg-red-600 transition duration-300">Logout</a>
+
+      {% else %}
+
+      <a href="{{ url_for('auth.login') }}"
+        class="bg-green-500 text-white text-sm font-semibold px-4 py-2 rounded-md hover:bg-green-600 transition duration-300">Login</a>
+
+      <a href="{{ url_for('auth.signup') }}"
+        class="bg-blue-400 text-white text-sm font-semibold px-4 py-2 rounded-md hover:bg-blue-500 transition duration-300">Sign
+        Up</a>
+
+      {% endif %}
+
+    </div>
   </nav>
+
 
   <!-- FLASH MESSAGES -->
   {% with messages = get_flashed_messages(with_categories=true) %}
@@ -64,7 +74,7 @@
 
 
   <!-- MAIN CONTENT -->
-  <div class="flex justify-center items-center min-h-screen bg-gray-100">
+  <div class="flex justify-center items-center min-h-screen bg-gray-100 flex-col">
 
     {% block content %}
     {% endblock content %}
@@ -72,7 +82,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="bg-gray-800 text-white text-center py-4">
+  <footer class="bg-gray-800 text-white text-center py-4 text-sm">
     &copy; 2024 ToDo App. All rights reserved.
   </footer>
 
