--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,50 +1,50 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<form action="" method="post" id="signup" class="bg-white p-6 rounded-lg shadow-md w-full max-w-sm">
+<form action="" method="post" id="signup" class="bg-white pt-4 pb-6 px-6 rounded-lg shadow-md w-full max-w-sm">
     {{ form.hidden_tag() }}
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-700">{{ title }}</h1>
+    <h1 class="text-2xl font-bold mt-4 mb-8 text-center text-blue-700">{{ title }}</h1>
 
     <div class="mb-4">
-        {{ form.username.label(class_="block text-gray-700 font-medium mb-2") }}
-        {{ form.username(class_="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-400
+        {{ form.username.label(class_="block text-gray-700 font-medium text-sm mb-2") }}
+        {{ form.username(class_="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400
         focus:outline-none") }}
         {% if form.username.errors %}
         {% for error in form.username.errors %}
-        <div class="text-red-500 text-sm mt-1">{{ error }}</div>
+        <div class="text-red-500 text-xs mt-1">{{ error }}</div>
         {% endfor %}
         {% endif %}
     </div>
 
     <div class="mb-4">
-        {{ form.email.label(class_="block text-gray-700 font-medium mb-2") }}
-        {{ form.email(class_="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-400
+        {{ form.email.label(class_="block text-gray-700 font-medium text-sm mb-2") }}
+        {{ form.email(class_="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400
         focus:outline-none") }}
         {% if form.email.errors %}
         {% for error in form.email.errors %}
-        <div class="text-red-500 text-sm mt-1">{{ error }}</div>
+        <div class="text-red-500 text-xs mt-1">{{ error }}</div>
         {% endfor %}
         {% endif %}
     </div>
 
     <div class="mb-4">
-        {{ form.password.label(class_="block text-gray-700 font-medium mb-2") }}
-        {{ form.password(class_="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-400
+        {{ form.password.label(class_="block text-gray-700 font-medium text-sm mb-2") }}
+        {{ form.password(class_="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400
         focus:outline-none") }}
         {% if form.password.errors %}
         {% for error in form.password.errors %}
-        <div class="text-red-500 text-sm mt-1">{{ error }}</div>
+        <div class="text-red-500 text-xs mt-1">{{ error }}</div>
         {% endfor %}
         {% endif %}
     </div>
 
     <div class="mb-4">
-        {{ form.confirm_password.label(class_="block text-gray-700 font-medium mb-2") }}
+        {{ form.confirm_password.label(class_="block text-gray-700 font-medium text-sm mb-2") }}
         {{ form.confirm_password(class_="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-400
         focus:outline-none") }}
         {% if form.confirm_password.errors %}
         {% for error in form.confirm_password.errors %}
-        <div class="text-red-500 text-sm mt-1">{{ error }}</div>
+        <div class="text-red-500 text-xs mt-1">{{ error }}</div>
         {% endfor %}
         {% endif %}
     </div>
@@ -55,9 +55,9 @@
     </div>
 
     <div class="text-center">
-        <p class="text-gray-600">
+        <p class="text-gray-600 text-sm">
             Already registered?
-            <a href="{{ url_for('auth.login') }}" class="text-blue-500 hover:underline">Log in</a>
+            <a href="{{ url_for('auth.login') }}" class="text-blue-500 bg-slate-100 px-2 py-1 rounded-sm hover:underline">Log in</a>
         </p>
     </div>
 </form>
